attempt at fixing ios overflow

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -34,6 +34,7 @@ body {
 	font-family: $font;
 	background-color: #F9F9F9;
 	height: 100vh;
+	position: relative;
 	// overflow: hidden;
 }
 
